--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,13 +12,13 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v3
         with:
           distribution: adopt
-          java-version: 11
+          java-version: 17
 
       - name: Build
         run: mvn -B -DskipTests compile
