--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.1.0-jre</version>
+        </dependency>
+
         <!-- ======================================================================================================= -->
         <!-- Testing libraries -->
         <!-- ======================================================================================================= -->
